# pg2meili-cdc

./: .env.example  .gitignore  README.md  app_token_register.html  app_token_review.html  build.sh  go.mod  go.sum  online.py  token-说明.md  token.txt  后端接口.md  搜索接口.md
UniData/: README.md  pyproject.toml  test.py  后端接口.md  接口.md  通用文档接口.md
UniData/app/: __init__.py  main.py
UniData/app/api/: __init__.py  dependencies.py
UniData/app/api/v1/: __init__.py  router.py
UniData/app/api/v1/endpoints/: __init__.py  auth.py  documents.py  testcases.py
UniData/app/core/: __init__.py  auth.py  config.py  database.py
UniData/app/models/: __init__.py  app_index.py  document.py  testcase.py  token.py
UniData/app/repositories/: __init__.py  document_repository.py  index_repository.py  testcase_repository.py  token_repository.py
UniData/app/schemas/: __init__.py  document.py  testcase.py
UniData/app/services/: __init__.py  document_service.py  index_service.py  testcase_service.py  token_service.py
UniData/scripts/: add_testcase.py  create_all.py  generate_jwt.py
UniData/tests/: conftest.py  test_testcases.py
docs/: Meilisearch 真实场景.md  debezium 部署.md  debezium_docker-compose.yml  init_fastapi.md  sql.sql
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css
frontend/src/components/: BrowserSearchPage.tsx  ConfigSider.tsx  CreateTestCase.tsx  DeleteTestCase.tsx  MeiliEndpoint.tsx  MeiliSearchTool.tsx  ResponseArea.tsx  (+2 more)
meilisearch-sync-service/: .env.example  CLAUDE.md  README.md  main.go  接口.md
(+7 files in other folders)
